--- a/html/favorites.html
+++ b/html/favorites.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://pixabay.com/ http://conoret.com;">
     <title>Pixa</title>
-    <link rel="stylesheet" href="./styles.css">
-    <script type="module" src="./favorites.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+
+ <link rel="icon" type="image/png" href="../img/search.png"> 
+
+    <script type="module" src="../favorites.js"></script>
   </head>
   <body>
       <header class="container">
         <ul>
-            <a href="./index.html"><li>Home</li></a>
-             <a href="./favorites.html"><li>Favorites</li></a>
+            <a href="../index.html"><li>Home</li></a>
+             <a  class="active" href="./favorites.html"><li>Favorites</li></a>
         </ul>
       </header>
 
@@ -26,6 +29,7 @@
 </div>
       </main>
       <footer class="footer">
+          <p class="footer_text">&copy; 2024 by Anna Melnychenko.</p>
       </footer>
   </body>
 </html>
