--- a/index.html
+++ b/index.html
@@ -5,20 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://pixabay.com/ http://conoret.com;">
     <title>Pixa</title>
-    <!-- <link rel="stylesheet" href="node_modules/simplelightbox/dist/simple-lightbox.min.css"> -->
-    <!-- <script src="node_modules/simplelightbox/dist/simple-lightbox.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.css" integrity="sha512-5gTxhbmgsOKfPP2+TeKslkMmyxF0Cmyr2YrJrfaXD/ChLHavFXGzDDG9ZiOca1P/2/5nXuujkB2BWymVKu1pPg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js" integrity="sha512-Vtot07oogPy4e0JzAfUgyvia0fATgR1PWWNG89EeQgPXmaIhjGQIFijUVxRn0TScCMCH57Y7eJSixmYYDJkJ1A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-
-    <link rel="stylesheet" href="./styles.css">
+ <link rel="icon" type="image/png" href="./img/search.png"> 
+    <link rel="stylesheet" href="../css/styles.css">
   
 </head>
   <body>
       <header class="container">
         <ul>
-          <a href="./index.html"><li>Home</li></a>
-           <a class="favorites-button" href="./favorites.html"><li>Favorites</li></a>
+          <a href="./index.html" class="active"><li>Home</li></a>
+           <a href="./html/favorites.html"><li>Favorites</li></a>
       </ul>
 <form class="search-form" id="search-form">
   <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
@@ -35,6 +30,7 @@
 </div>
 </main>
 <footer class="footer">
+  <p class="footer_text">&copy; 2024 by Anna Melnychenko.</p>
 </footer>
 
 <script type="module" src="./index.js"></script>
