--- a/html/favorites.html
+++ b/html/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://pixabay.com/ http://conoret.com;">
-    <title>Pixa</title>
+    <title>Image Searcher</title>
     <link rel="stylesheet" href="../css/styles.css">
 
  <link rel="icon" type="image/png" href="../img/search.png"> 
