--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://pixabay.com/ http://conoret.com;">
     <title>Image Searcher</title>
  <link rel="icon" type="image/png" href="./img/search.png"> 
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
   
 </head>
   <body>
