background_and_cleaning

--- a/html/favorites.html
+++ b/html/favorites.html
@@ -9,7 +9,7 @@
 
  <link rel="icon" type="image/png" href="../img/search.png"> 
 
-    <script type="module" src="../favorites.js"></script>
+    <script type="module" src="../js/favorites.js"></script>
   </head>
   <body>
       <header class="container">
